# Farahs-PwC-Assesment

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
api/: index.py
app/: page.tsx
